--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "@docusaurus/module-type-aliases": "3.7.0",
     "@docusaurus/tsconfig": "3.7.0",
     "@docusaurus/types": "3.7.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.6.2"
   },
   "browserslist": {
